--- a/Data_Analysis/2-Pandas/Teoría/1_Introducing-Pandas-Objects.ipynb
+++ b/Data_Analysis/2-Pandas/Teoría/1_Introducing-Pandas-Objects.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,9 +798,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([(0, 0., 0.), (0, 0., 0.), (0, 0., 0.)],\n",
+       "      dtype=[('A', '<i8'), ('B', '<f8'), ('C', '<f8')])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "A = np.zeros(3, dtype=[('A', 'i8'), ('B', 'f8'), ('C', 'f8')])\n",
@@ -947,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -962,44 +974,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([3, 5, 7], dtype='int64')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indA & indB  # intersection"
+    "# indA & indB  # intersection\n",
+    "\n",
+    "indA.intersection(indB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([1, 2, 3, 5, 7, 9, 11], dtype='int64')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indA | indB  # union"
+    "# indA | indB  # union\n",
+    "indA.union(indB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([1, 2, 9, 11], dtype='int64')\n",
+      "Index([1, 9], dtype='int64')\n"
+     ]
+    }
+   ],
    "source": [
-    "indA ^ indB  # symmetric difference"
+    "# indA ^ indB  # symmetric difference\n",
+    "print(indA.symmetric_difference(indB))\n",
+    "print(indA.difference(indB))"
    ]
   },
   {
@@ -1029,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
