--- a/Data_Analysis/Anilisis_de_datos/ch_01/3-introduccion_al_data_analisis.ipynb
+++ b/Data_Analysis/Anilisis_de_datos/ch_01/3-introduccion_al_data_analisis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "- **Recogida de datos**: Todo análisis comienza con la recopilación de datos. Podemos recopilar datos de diversas fuentes, como bases de datos, API, archivos planos e Internet.\n",
     "- **Gestión de datos**: Una vez que tenemos los datos, tenemos que prepararlos para el análisis. Esto puede implicar remodelarlos, cambiar los tipos de datos, tratar los valores que faltan y/o agregarlos.\n",
-    "- **Análisis exploratorio de datos (AED)**: Podemos utilizar visualizaciones para explorar nuestros datos y resumirlos. Durante este tiempo, también comenzaremos a explorar los datos observando su estructura, formato y estadísticas de resumen.\n",
+    "- **Análisis exploratorio de datos (EDA)**: Podemos utilizar visualizaciones para explorar nuestros datos y resumirlos. Durante este tiempo, también comenzaremos a explorar los datos observando su estructura, formato y estadísticas de resumen.\n",
     "- **Extracción de conclusiones**: Después de haber explorado a fondo nuestros datos, podemos intentar sacar conclusiones o modelizarlos.\n",
     "\n",
     "## Fundamentos estadísticos\n",
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
