--- a/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
@@ -88,6 +88,170 @@
    "source": [
     "cual_es_mi_reto(fecha='08-04-1989')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reto 1: Hundir la Flota (Batalla Naval)\n",
+    "### Objetivo: Implementar una versión simplificada del juego de Batalla Naval usando Python y Numpy para manejar el tablero del juego.\n",
+    "\n",
+    "- Crear un tablero 10x10 usando Numpy arrays.\n",
+    "- Colocar 5 barcos de diferentes tamaños en posiciones aleatorias en el tablero.\n",
+    "- Permitir que el jugador ingrese coordenadas para \"disparar\".\n",
+    "- Mostrar un mensaje si el jugador acierta o falla, y actualizar el tablero acorde.\n",
+    "- Seguir jugando hasta que todos los barcos sean hundidos.\n",
+    "#### Habilidades aplicadas: Uso de arrays de Numpy, generación de números aleatorios, estructuras de control en Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "array_inicio = np.array(' ')\n",
+    "tablero = np.tile(array_inicio,(10,10))\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yo cree cuatro variables:\n",
+    "- Barco : tamaño del barco\n",
+    "- Fila: fila, random\n",
+    "- Columna: columna, random\n",
+    "- Posición: random.choice entre 'norte','sur','este','oeste'.\n",
+    "Luego asigne el tamaño del tablero a dos variables:\n",
+    "Row, Column = tablero.shape\n",
+    "Ambos valen 10.\n",
+    "\n",
+    "Y ya después la lógica sería crear un bucle con sus condicionales. \n",
+    "Para que no se salga del tablero, yo opte por sumar barco + columna/fila y si es mayor a Columns/Rows (Columns/Rows le asigne el valor de shape) no se puede agregar el barco.\n",
+    "Y si es menor, lo agregas como lo harías con un diccionario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inicio():\n",
+    "    print(\"Bienvenido a Hundir la flota. Añadiremos 5 barcos para iniciar el juego\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Start: (4, 4)\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "long_barco = random.randint(0,5)\n",
+    "print(long_barco)\n",
+    "\n",
+    "\n",
+    "fila_inicio = random.randint(0,10)\n",
+    "col_inicio = random.randint(0,5)\n",
+    "\n",
+    "\n",
+    "start = (fila_inicio,col_inicio)\n",
+    "print(\"Start:\", start)\n",
+    "# print(type(start))\n",
+    "tablero[start] = 'O'\n",
+    "print(tablero)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sur\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# puntos_cardinales = {'N':1, 'S':2, 'E':3, 'O':4}\n",
+    "puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "direccion = random.choice(puntos_cardinales)\n",
+    "print(direccion)\n",
+    "\n",
+    "if direccion == 'norte':\n",
+    "    tablero[(fila_inicio - 1),col_inicio] = 'O'\n",
+    "elif direccion == 'sur':\n",
+    "    tablero[(fila_inicio + 1),col_inicio] = 'O'\n",
+    "elif direccion == 'este':\n",
+    "    tablero[fila_inicio,(col_inicio + 1)] = 'O'\n",
+    "elif direccion == 'oeste':\n",
+    "    tablero[fila_inicio,(col_inicio - 1)] = 'O'    \n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -106,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
