--- a/Data_Analysis/2-Pandas/Practica/2-Chipotle/Chipotle.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/2-Chipotle/Chipotle.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chipo = pd.read_csv(url, sep='\\t')\n",
+    "#  un tabulador es igual a 4 espacios, pero tiene que ser lo que ponga en el archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>numero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Izze</td>\n",
+       "      <td>[Clementine]</td>\n",
+       "      <td>$3.39</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>[Apple]</td>\n",
+       "      <td>$3.39</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
+       "      <td>$16.98</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  quantity                              item_name  \\\n",
+       "0         1         1           Chips and Fresh Tomato Salsa   \n",
+       "1         1         1                                   Izze   \n",
+       "2         1         1                       Nantucket Nectar   \n",
+       "3         1         1  Chips and Tomatillo-Green Chili Salsa   \n",
+       "4         2         2                           Chicken Bowl   \n",
+       "\n",
+       "                                  choice_description item_price numero  \n",
+       "0                                                NaN     $2.39       $  \n",
+       "1                                       [Clementine]     $3.39       $  \n",
+       "2                                            [Apple]     $3.39       $  \n",
+       "3                                                NaN     $2.39       $  \n",
+       "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98       $  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,18 +181,334 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$9.39 '"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Paso 4. ¿Cuántos productos cuestan más de 10,00 dólares?"
+    "chipo['item_price'].max()\n",
+    "# no está bien lo anterior, porque el return tiene un espacio, es un tipo object y el numero mas alto que puede conseguir es el 9, \n",
+    "# el 16 empieza por 1, por loq ue para pd es menor qeu eel 9.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " chipo['numero'] = chipo['item_price'].str[1:].str.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>numero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Izze</td>\n",
+       "      <td>[Clementine]</td>\n",
+       "      <td>$3.39</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>[Apple]</td>\n",
+       "      <td>$3.39</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
+       "      <td>$16.98</td>\n",
+       "      <td>16.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4617</th>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Sour ...</td>\n",
+       "      <td>$11.75</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4618</th>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...</td>\n",
+       "      <td>$11.75</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4619</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$11.25</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4620</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
+       "      <td>$8.75</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4621</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$8.75</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4622 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity                              item_name  \\\n",
+       "0            1         1           Chips and Fresh Tomato Salsa   \n",
+       "1            1         1                                   Izze   \n",
+       "2            1         1                       Nantucket Nectar   \n",
+       "3            1         1  Chips and Tomatillo-Green Chili Salsa   \n",
+       "4            2         2                           Chicken Bowl   \n",
+       "...        ...       ...                                    ...   \n",
+       "4617      1833         1                          Steak Burrito   \n",
+       "4618      1833         1                          Steak Burrito   \n",
+       "4619      1834         1                     Chicken Salad Bowl   \n",
+       "4620      1834         1                     Chicken Salad Bowl   \n",
+       "4621      1834         1                     Chicken Salad Bowl   \n",
+       "\n",
+       "                                     choice_description item_price numero  \n",
+       "0                                                   NaN     $2.39    2.39  \n",
+       "1                                          [Clementine]     $3.39    3.39  \n",
+       "2                                               [Apple]     $3.39    3.39  \n",
+       "3                                                   NaN     $2.39    2.39  \n",
+       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   16.98  \n",
+       "...                                                 ...        ...    ...  \n",
+       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...    $11.75   11.75  \n",
+       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...    $11.75   11.75  \n",
+       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...    $11.25   11.25  \n",
+       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...     $8.75    8.75  \n",
+       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...     $8.75    8.75  \n",
+       "\n",
+       "[4622 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4622 entries, 0 to 4621\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   order_id            4622 non-null   int64 \n",
+      " 1   quantity            4622 non-null   int64 \n",
+      " 2   item_name           4622 non-null   object\n",
+      " 3   choice_description  3376 non-null   object\n",
+      " 4   item_price          4622 non-null   object\n",
+      " 5   numero              4622 non-null   object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 216.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo.info()\n",
+    "# numero sigue siendo object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.25"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo['numero'] = chipo['numero'].astype('float')\n",
+    "# ahora sí puedo hacer el maximo\n",
+    "\n",
+    "chipo['numero'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>numero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3598</th>\n",
+       "      <td>1443</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$44.25</td>\n",
+       "      <td>44.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity                     item_name choice_description  \\\n",
+       "3598      1443        15  Chips and Fresh Tomato Salsa                NaN   \n",
+       "\n",
+       "     item_price  numero  \n",
+       "3598    $44.25    44.25  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pero me pide el nombre, no el valor:\n",
+    "mask = chipo['numero'] == chipo['numero'].max()\n",
+    "chipo[mask]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
