--- a/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,6 +134,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inicio():\n",
+    "    print(\"Bienvenido a Hundir la flota. Añadiremos 5 barcos para iniciar el juego\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "Start: (7, 1)\n",
+      "[['O' 'O' ' ' ' ' ' ' ' ' ' ' 'O' ' ' 'O']\n",
+      " ['O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
+      " ['O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " ['O' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " ['O' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " ['O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "# variable aleatoria para la longitud del barco, como maximo podrá ocupar 5 coordenadas:\n",
+    "long_barco = random.randint(0,5)\n",
+    "print(long_barco)\n",
+    "\n",
+    "# creamos dos variables para elegir aleatoriamente donde se coloca la priemra parte del barco:\n",
+    "fila_inicio = random.randint(0,10)\n",
+    "col_inicio = random.randint(0,10)\n",
+    "\n",
+    "\n",
+    "start = (fila_inicio,col_inicio)\n",
+    "print(\"Start:\", start)\n",
+    "# print(type(start))\n",
+    "tablero[start] = 'O'\n",
+    "print(tablero)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inicio_juego():\n",
+    "    numero_barcos= 0 \n",
+    "    \n",
+    "    while numero_barcos <= 5:\n",
+    "        # variable aleatoria para la longitud del barco, como maximo podrá ocupar 5 coordenadas:\n",
+    "        # print(long_barco)\n",
+    "        long_barco = random.randint(0,5)\n",
+    "        # creamos dos variables para elegir aleatoriamente donde se coloca la priemra parte del barco:\n",
+    "        fila_inicio = random.randint(0,9)\n",
+    "        col_inicio = random.randint(0,9)\n",
+    "\n",
+    "        start = (fila_inicio,col_inicio)\n",
+    "        # print(\"Start:\", start)\n",
+    "        # print(type(start))\n",
+    "        tablero[start] = 'O'\n",
+    "\n",
+    "\n",
+    "        # creamos la variable direccion para que se fije aleatoriamente la posicion del barco en el tablero\n",
+    "        puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "        direccion = random.choice(puntos_cardinales)\n",
+    "        # print(direccion)\n",
+    "\n",
+    "        size = 0\n",
+    "        try:\n",
+    "            while long_barco <= size:\n",
+    "\n",
+    "                if direccion == 'norte':\n",
+    "                    tablero[(fila_inicio - 1),col_inicio] = 'O'\n",
+    "                elif direccion == 'sur':\n",
+    "                    tablero[(fila_inicio + 1),col_inicio] = 'O'\n",
+    "                elif direccion == 'este':\n",
+    "                    tablero[fila_inicio,(col_inicio + 1)] = 'O'\n",
+    "                elif direccion == 'oeste':\n",
+    "                    tablero[fila_inicio,(col_inicio - 1)] = 'O'    \n",
+    "        except IndexError as e:\n",
+    "                pass    \n",
+    "        size += 1\n",
+    "            # print(tablero)\n",
+    "            # print('Barco creado')\n",
+    "    numero_barcos += 1\n",
+    "    return print(tablero), print('Barcos creados')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\Data_Analysis\\1-Numpy\\Practica\\Desafio\\Desafio.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m inicio_juego()\n",
+      "\u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\Data_Analysis\\1-Numpy\\Practica\\Desafio\\Desafio.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     tablero[(fila_inicio \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m),col_inicio] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mO\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39melif\u001b[39;00m direccion \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msur\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     tablero[(fila_inicio \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m),col_inicio] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mO\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39melif\u001b[39;00m direccion \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39meste\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     tablero[fila_inicio,(col_inicio \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mO\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "inicio_juego()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,17 +279,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def inicio():\n",
-    "    print(\"Bienvenido a Hundir la flota. Añadiremos 5 barcos para iniciar el juego\")\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -171,87 +286,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "Start: (4, 4)\n",
-      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+      "[[' ' 'O' ' ' 'O' ' ' ' ' 'O' 'O' ' ' 'O']\n",
+      " ['O' 'O' 'O' 'O' 'O' ' ' 'O' 'O' ' ' ' ']\n",
+      " [' ' 'O' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' ' ' 'O' 'O' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' ' ' 'O' 'O' 'O' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' ' ' 'O' 'O' 'O' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' 'O' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' 'O' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ']]\n"
      ]
     }
    ],
    "source": [
     "import random \n",
+    "tablero.shape\n",
+    "\n",
     "long_barco = random.randint(0,5)\n",
-    "print(long_barco)\n",
-    "\n",
-    "\n",
+    "        \n",
     "fila_inicio = random.randint(0,10)\n",
-    "col_inicio = random.randint(0,5)\n",
-    "\n",
-    "\n",
+    "col_inicio = random.randint(0,10)\n",
     "start = (fila_inicio,col_inicio)\n",
-    "print(\"Start:\", start)\n",
-    "# print(type(start))\n",
-    "tablero[start] = 'O'\n",
-    "print(tablero)\n",
     "\n",
-    "\n"
+    "puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "direccion = random.choice(puntos_cardinales)\n",
+    "\n",
+    "\n",
+    "\n",
+    "if direccion == 'norte':\n",
+    "        \n",
+    "        if fila_inicio - long_barco > 0:\n",
+    "            tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
+    "        else:\n",
+    "            fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "            tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
+    "\n",
+    "elif direccion == 'sur':\n",
+    "        if fila_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
+    "        else:\n",
+    "            fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
+    "            tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
+    "\n",
+    "elif direccion == 'este':\n",
+    "        if col_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
+    "        else:\n",
+    "            col_inicio2 = 10 - col_inicio + long_barco\n",
+    "            tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
+    "\n",
+    "\n",
+    "elif direccion == 'oeste':\n",
+    "        if col_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
+    "        else:\n",
+    "            col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
+    "            tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
+    "    \n",
+    "    print(tablero)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sur\n",
-      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+      "(9, 11)\n",
+      "no\n"
      ]
     }
    ],
-   "source": [
-    "\n",
-    "# puntos_cardinales = {'N':1, 'S':2, 'E':3, 'O':4}\n",
-    "puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
-    "direccion = random.choice(puntos_cardinales)\n",
-    "print(direccion)\n",
-    "\n",
-    "if direccion == 'norte':\n",
-    "    tablero[(fila_inicio - 1),col_inicio] = 'O'\n",
-    "elif direccion == 'sur':\n",
-    "    tablero[(fila_inicio + 1),col_inicio] = 'O'\n",
-    "elif direccion == 'este':\n",
-    "    tablero[fila_inicio,(col_inicio + 1)] = 'O'\n",
-    "elif direccion == 'oeste':\n",
-    "    tablero[fila_inicio,(col_inicio - 1)] = 'O'    \n",
-    "print(tablero)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def disparo(a:int, b:int):\n",
+    "    input"
+   ]
   }
  ],
  "metadata": {
