--- a/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
@@ -301,7 +301,7 @@
    ],
    "source": [
     "import random \n",
-    "tablero.shape\n",
+    "\n",
     "\n",
     "long_barco = random.randint(0,5)\n",
     "        \n",
@@ -349,19 +349,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9, 11)\n",
-      "no\n"
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "array_inicio = np.array(' ')\n",
+    "tablero = np.tile(array_inicio,(10,10))\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' 'O' 'O' 'O' 'O' 'O' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' 'O' 'O' 'O' 'O' 'O']\n",
+      " [' ' ' ' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "numero_barcos = 0\n",
+    "\n",
+    "while numero_barcos < 6:\n",
+    "    \n",
+    "    long_barco = random.randint(0,5)\n",
+    "        \n",
+    "    fila_inicio = random.randint(0,10)\n",
+    "    col_inicio = random.randint(0,10)\n",
+    "        \n",
+    "\n",
+    "    puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "    direccion = random.choice(puntos_cardinales)\n",
+    "\n",
+    "\n",
+    "    if direccion == 'norte':\n",
+    "            \n",
+    "            if fila_inicio - long_barco > 0:\n",
+    "                tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "            else:\n",
+    "                fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "                tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "\n",
+    "    elif direccion == 'sur':\n",
+    "            if fila_inicio + long_barco < 10:\n",
+    "                tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "            else:\n",
+    "                fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
+    "                tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "\n",
+    "    elif direccion == 'este':\n",
+    "            if col_inicio + long_barco < 10:\n",
+    "                tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "            else:\n",
+    "                col_inicio2 = 10 - col_inicio + long_barco\n",
+    "                tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "\n",
+    "\n",
+    "    elif direccion == 'oeste':\n",
+    "            if col_inicio + long_barco < 10:\n",
+    "                tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "            else:\n",
+    "                col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
+    "                tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
+    "                numero_barcos += 1\n",
+    "    \n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# otra forma de crear los barcos iniciales sería creqar 4 variables barco y hacer el proceso en cada una, sin bucle while.\n",
+    "# o con un bulce for que itere sobre cada elemento de una lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# en esta opcion intento crear 5 barcos con variables. en lugar de imprimir en el tablero directamente, consigo las coordenadas y luego pinto\n",
+    " \n",
+    "long_barco = random.randint(0,5)\n",
+    "        \n",
+    "fila_inicio = random.randint(0,10)\n",
+    "col_inicio = random.randint(0,10)\n",
+    "    \n",
+    "\n",
+    "puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "direccion = random.choice(puntos_cardinales)\n",
+    "\n",
+    "\n",
+    "if direccion == 'norte':\n",
+    "        \n",
+    "        if fila_inicio - long_barco > 0:\n",
+    "            tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "        else:\n",
+    "            fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "            tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "\n",
+    "elif direccion == 'sur':\n",
+    "        if fila_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "        else:\n",
+    "            fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
+    "            tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "\n",
+    "elif direccion == 'este':\n",
+    "        if col_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "        else:\n",
+    "            col_inicio2 = 10 - col_inicio + long_barco\n",
+    "            tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "\n",
+    "\n",
+    "elif direccion == 'oeste':\n",
+    "        if col_inicio + long_barco < 10:\n",
+    "            tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
+    "            numero_barcos += 1\n",
+    "        else:\n",
+    "            col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
+    "            tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
+    "            numero_barcos += 1"
+   ]
   },
   {
    "cell_type": "code",
