--- a/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -404,133 +404,259 @@
     "\n",
     "while numero_barcos < 6:\n",
     "    \n",
-    "    long_barco = random.randint(0,5)\n",
-    "        \n",
-    "    fila_inicio = random.randint(0,10)\n",
-    "    col_inicio = random.randint(0,10)\n",
-    "        \n",
-    "\n",
-    "    puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
-    "    direccion = random.choice(puntos_cardinales)\n",
-    "\n",
-    "\n",
-    "    if direccion == 'norte':\n",
-    "            \n",
-    "            if fila_inicio - long_barco > 0:\n",
-    "                tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "            else:\n",
-    "                fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
-    "                tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "\n",
-    "    elif direccion == 'sur':\n",
-    "            if fila_inicio + long_barco < 10:\n",
-    "                tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "            else:\n",
-    "                fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
-    "                tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "\n",
-    "    elif direccion == 'este':\n",
-    "            if col_inicio + long_barco < 10:\n",
-    "                tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "            else:\n",
-    "                col_inicio2 = 10 - col_inicio + long_barco\n",
-    "                tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "\n",
-    "\n",
-    "    elif direccion == 'oeste':\n",
-    "            if col_inicio + long_barco < 10:\n",
-    "                tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
-    "                numero_barcos += 1\n",
-    "            else:\n",
-    "                col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
-    "                tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
-    "                numero_barcos += 1\n",
+    "    if tablero[] != 'O':\n",
     "    \n",
+    "        long_barco = random.randint(0,5)\n",
+    "            \n",
+    "        fila_inicio = random.randint(0,10)\n",
+    "        col_inicio = random.randint(0,10)\n",
+    "            \n",
+    "\n",
+    "        puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "        direccion = random.choice(puntos_cardinales)\n",
+    "\n",
+    "\n",
+    "        if direccion == 'norte':\n",
+    "                \n",
+    "                if fila_inicio - long_barco > 0:\n",
+    "                    tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "                else:\n",
+    "                    fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "                    tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "\n",
+    "        elif direccion == 'sur':\n",
+    "                if fila_inicio + long_barco < 10:\n",
+    "                    tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "                else:\n",
+    "                    fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
+    "                    tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "\n",
+    "        elif direccion == 'este':\n",
+    "                if col_inicio + long_barco < 10:\n",
+    "                    tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "                else:\n",
+    "                    col_inicio2 = 10 - col_inicio + long_barco\n",
+    "                    tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "\n",
+    "\n",
+    "        elif direccion == 'oeste':\n",
+    "                if col_inicio + long_barco < 10:\n",
+    "                    tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "                else:\n",
+    "                    col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
+    "                    tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
+    "                    numero_barcos += 1\n",
+    "    else: \n",
+    "         \n",
     "print(tablero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# otra forma de crear los barcos iniciales sería creqar 4 variables barco y hacer el proceso en cada una, sin bucle while.\n",
-    "# o con un bulce for que itere sobre cada elemento de una lista"
+    "import numpy as np\n",
+    "array_inicio = np.array(' ')\n",
+    "tablero = np.tile(array_inicio,(10,10))\n",
+    "print(tablero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1, 8)\n",
+      "(0, 0, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# en esta opcion intento crear 5 barcos con variables. en lugar de imprimir en el tablero directamente, consigo las coordenadas y luego pinto\n",
-    " \n",
+    "import random\n",
+    "barco1 = 0\n",
     "long_barco = random.randint(0,5)\n",
-    "        \n",
+    "         \n",
     "fila_inicio = random.randint(0,10)\n",
     "col_inicio = random.randint(0,10)\n",
-    "    \n",
+    "        \n",
     "\n",
-    "puntos_cardinales = ['norte', 'sur', 'este', 'oeste']\n",
+    "orientacion = ['norte', 'sur', 'este', 'oeste']\n",
     "direccion = random.choice(puntos_cardinales)\n",
     "\n",
     "\n",
     "if direccion == 'norte':\n",
-    "        \n",
-    "        if fila_inicio - long_barco > 0:\n",
-    "            tablero[fila_inicio:(fila_inicio - long_barco),col_inicio] = 'O'\n",
-    "            numero_barcos += 1\n",
-    "        else:\n",
-    "            fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
-    "            tablero[fila_inicio2:(fila_inicio2 - long_barco),col_inicio] = 'O'\n",
-    "            numero_barcos += 1\n",
+    "            \n",
+    "            if fila_inicio - long_barco > 0:\n",
+    "                barco1 = (fila_inicio,(fila_inicio - long_barco),col_inicio)\n",
+    "              \n",
+    "            else:\n",
+    "                fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "                barco1 = (fila_inicio2,(fila_inicio2 - long_barco),col_inicio)\n",
+    "              \n",
     "\n",
     "elif direccion == 'sur':\n",
     "        if fila_inicio + long_barco < 10:\n",
-    "            tablero[fila_inicio:(fila_inicio + long_barco),col_inicio] = 'O'\n",
-    "            numero_barcos += 1\n",
+    "            barco1 = (fila_inicio,(fila_inicio + long_barco),col_inicio)\n",
+    "            \n",
     "        else:\n",
     "            fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
-    "            tablero[fila_inicio2:(fila_inicio2 + long_barco),col_inicio] = 'O'\n",
-    "            numero_barcos += 1\n",
+    "            barco1 = (fila_inicio2,(fila_inicio2 + long_barco),col_inicio)\n",
+    "            \n",
     "\n",
     "elif direccion == 'este':\n",
     "        if col_inicio + long_barco < 10:\n",
-    "            tablero[fila_inicio,col_inicio:(col_inicio + long_barco)] = 'O'\n",
-    "            numero_barcos += 1\n",
+    "            barco1 = (fila_inicio,col_inicio,(col_inicio + long_barco))\n",
+    "            \n",
     "        else:\n",
     "            col_inicio2 = 10 - col_inicio + long_barco\n",
-    "            tablero[fila_inicio,col_inicio2:(col_inicio2 + long_barco)] = 'O'\n",
-    "            numero_barcos += 1\n",
-    "\n",
+    "            barco1= (fila_inicio,col_inicio2,(col_inicio2 + long_barco))\n",
+    "            \n",
     "\n",
     "elif direccion == 'oeste':\n",
     "        if col_inicio + long_barco < 10:\n",
-    "            tablero[fila_inicio,col_inicio:(col_inicio - long_barco)] = 'O'\n",
-    "            numero_barcos += 1\n",
+    "            barco1 = (fila_inicio,col_inicio,(col_inicio - long_barco))\n",
+    "            \n",
     "        else:\n",
     "            col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
-    "            tablero[fila_inicio,col_inicio2:(col_inicio2 - long_barco)] = 'O'\n",
-    "            numero_barcos += 1"
+    "            barco1 = (fila_inicio,col_inicio2,(col_inicio2 - long_barco))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(barco1)\n",
+    "tablero[barco1[0:2],barco1[-1]] = 'O'\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creamos una lista para iterar sobre ella con un bucle for\n",
+    "barco1 = 0\n",
+    "barco2 = 0\n",
+    "barco3 = 0\n",
+    "barco4 = 0\n",
+    "barco5 = 0\n",
+    "barcos= [barco1, barco2, barco3, barco4,barco5]\n",
+    "for i in barcos:\n",
+    "    long_barco = random.randint(0,5)\n",
+    "            \n",
+    "    fila_inicio = random.randint(0,10)\n",
+    "    col_inicio = random.randint(0,10)\n",
+    "            \n",
+    "\n",
+    "    orientacion = ['norte', 'sur', 'este', 'oeste']\n",
+    "    direccion = random.choice(puntos_cardinales)\n",
+    "\n",
+    "    if direccion == 'norte':\n",
+    "                \n",
+    "                if fila_inicio - long_barco > 0:\n",
+    "                    i = (fila_inicio,(fila_inicio - long_barco),col_inicio)\n",
+    "                \n",
+    "                else:\n",
+    "                    fila_inicio2 = fila_inicio + long_barco-fila_inicio\n",
+    "                    i = (fila_inicio2,(fila_inicio2 - long_barco),col_inicio)\n",
+    "                \n",
+    "\n",
+    "    elif direccion == 'sur':\n",
+    "            if fila_inicio + long_barco < 10:\n",
+    "                i = (fila_inicio,(fila_inicio + long_barco),col_inicio)\n",
+    "                \n",
+    "            else:\n",
+    "                fila_inicio2 = fila_inicio + (long_barco-fila_inicio)\n",
+    "                i = (fila_inicio2,(fila_inicio2 + long_barco),col_inicio)\n",
+    "                \n",
+    "\n",
+    "    elif direccion == 'este':\n",
+    "            if col_inicio + long_barco < 10:\n",
+    "                i = (fila_inicio,col_inicio,(col_inicio + long_barco))\n",
+    "                \n",
+    "            else:\n",
+    "                col_inicio2 = 10 - col_inicio + long_barco\n",
+    "                i= (fila_inicio,col_inicio2,(col_inicio2 + long_barco))\n",
+    "                \n",
+    "\n",
+    "    elif direccion == 'oeste':\n",
+    "            if col_inicio + long_barco < 10:\n",
+    "                i = (fila_inicio,col_inicio,(col_inicio - long_barco))\n",
+    "                \n",
+    "            else:\n",
+    "                col_inicio2 = col_inicio + (long_barco-col_inicio)\n",
+    "                i = (fila_inicio,col_inicio2,(col_inicio2 - long_barco))\n",
+    "\n",
+    "    \n",
+    "print(barcos)\n",
+    "# for i in barcos:\n",
+    "#     tablero[i[0:2],i[-1]] = 'O'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def disparo(a:int, b:int):\n",
-    "    input"
+    "# crear disparo. funcion disparar\n",
+    "def disparo(a:tuple):\n",
+    "    a  = input('Inserte las coordenadas del disparo',)\n",
+    "    a = tuple(a)\n",
+    "    if tablero[a] == 'O':\n",
+    "        tablero[a]  = 'X'\n",
+    "        return print('Enhorabuena, ha disparado a un barco')\n",
+    "    else: \n",
+    "        return print('prueba otra vez')\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
